added ipynb checkpoints to gitignore

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c353ef1a",
+   "id": "8615863e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6275bc95",
+   "id": "43448c94",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "45ac6e1f",
+   "id": "c6b51941",
    "metadata": {
     "collapsed": true
    },
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "07259df4",
+   "id": "387211bb",
    "metadata": {
     "collapsed": true
    },
@@ -168,32 +168,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "de16bfe7",
+   "execution_count": 10,
+   "id": "8586fe03",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'train_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m-----------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                             Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mtrain_df\u001b[49m\u001b[38;5;241m.\u001b[39mhead()\n\u001b[0;32m      2\u001b[0m train_df\u001b[38;5;241m.\u001b[39mtail() \n\u001b[0;32m      3\u001b[0m train_df\u001b[38;5;241m.\u001b[39msample(\u001b[38;5;241m5\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train_df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>MSSubClass</th>\n",
+       "      <th>MSZoning</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>Street</th>\n",
+       "      <th>Alley</th>\n",
+       "      <th>LotShape</th>\n",
+       "      <th>LandContour</th>\n",
+       "      <th>Utilities</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PoolArea</th>\n",
+       "      <th>PoolQC</th>\n",
+       "      <th>Fence</th>\n",
+       "      <th>MiscFeature</th>\n",
+       "      <th>MiscVal</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>YrSold</th>\n",
+       "      <th>SaleType</th>\n",
+       "      <th>SaleCondition</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>13695</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>159000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>981</th>\n",
+       "      <td>982</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>12203</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>336000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>109</td>\n",
+       "      <td>50</td>\n",
+       "      <td>RM</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>8500</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>115000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287</th>\n",
+       "      <td>288</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8125</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>88000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>1297</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>8700</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MnPrv</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>155000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 81 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Id  MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
+       "18      19          20       RL         66.0    13695   Pave   NaN      Reg   \n",
+       "981    982          60       RL         98.0    12203   Pave   NaN      IR1   \n",
+       "108    109          50       RM         85.0     8500   Pave   NaN      Reg   \n",
+       "287    288          20       RL          NaN     8125   Pave   NaN      IR1   \n",
+       "1296  1297          20       RL         80.0     8700   Pave   NaN      Reg   \n",
+       "\n",
+       "     LandContour Utilities  ... PoolArea PoolQC  Fence MiscFeature MiscVal  \\\n",
+       "18           Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
+       "981          Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
+       "108          Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
+       "287          Lvl    AllPub  ...        0    NaN    NaN         NaN       0   \n",
+       "1296         Lvl    AllPub  ...        0    NaN  MnPrv         NaN       0   \n",
+       "\n",
+       "     MoSold YrSold  SaleType  SaleCondition  SalePrice  \n",
+       "18        6   2008        WD         Normal     159000  \n",
+       "981       7   2009        WD         Normal     336000  \n",
+       "108       8   2007        WD         Normal     115000  \n",
+       "287       6   2006        WD         Normal      88000  \n",
+       "1296     12   2008        WD         Normal     155000  \n",
+       "\n",
+       "[5 rows x 81 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_da.head()\n",
-    "train_df.tail() \n",
-    "train_df.sample(5)"
+    "train_data.head()\n",
+    "train_data.tail() \n",
+    "train_data.sample(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fefef3e",
+   "id": "c09ff912",
    "metadata": {},
    "outputs": [],
    "source": []
