notes on updating eda

--- a/notebooks/1_data_exploration.ipynb
+++ b/notebooks/1_data_exploration.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "382a5279",
+   "id": "7d946d46",
    "metadata": {},
    "source": [
     "## Individual Features Exploration\n",
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "37daef01",
+   "id": "d8227283",
    "metadata": {
     "scrolled": true
    },
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "19e38278",
+   "id": "794b6325",
    "metadata": {
     "collapsed": true
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a98f6676",
+   "id": "85e99e07",
    "metadata": {},
    "source": [
     "The skewness value of 1.37 and distribution of `GrLivArea` shows there are more houses with smaller living areas, and the tail of the distribution extends towards larger living areas. This indicates the presence of larger or more spacious houses as being rare - outliers.\n",
@@ -419,28 +419,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68946649",
+   "id": "c8f38b46",
    "metadata": {},
    "source": [
-    " \n",
+    "Neighborhood: Represents the physical locations within Ames city limits. There are 25 unique neighborhoods.\n",
     "\n",
-    "Categorical Features: We examined Neighborhood, ExterQual, Foundation, and SaleCondition.\n",
+    "ExterQual: Evaluates the quality of the material on the exterior. Values include Good (Gd), Average/Typical (TA), Excellent (Ex), and Fair (Fa).\n",
+    "Foundation: Describes the type of foundation of the property. Types include Poured Concrete (PConc), Cinder Block (CBlock), Brick & Tile (BrkTil), Wood (Wood), Slab (Slab), and Stone (Stone).\n",
     "\n",
-    "Rationale:\n",
-    "\n",
-    "Neighborhood: The location of a property is a classic determinant of its price. Different neighborhoods can have varying amenities, reputation, and demand, leading to price disparities.\n",
-    "ExterQual: The exterior quality can influence a buyer's first impression and the property's overall desirability.\n",
-    "Foundation: The type of foundation can be related to the age, quality, and durability of a property.\n",
-    "SaleCondition: It provides context about the sale, which can have implications on the price. For instance, a forced sale might fetch a lower price compared to a voluntary one.\n",
-    "Execution:\n",
-    "For the numerical features, we plotted their distributions to understand their spread, potential outliers, and skewness. For the categorical features, we looked at the unique values to understand the variety within them and their potential implications on the house prices.\n",
-    "\n",
-    "In a comprehensive EDA, it's essential to start with a mix of intuitive features (like living area for property pricing) and some that might provide deeper insights upon exploration (like sale condition). The chosen features in the \"Individual Features Exploration\" section fit these criteria, offering both a surface-level understanding and the potential for deeper insights."
+    "SaleCondition: Describes the condition of sale. Values include Normal, Abnormal (Abnorml), Home not completed when last assessed (Partial), Adjoining Land Purchase (AdjLand), Allocation - two linked properties with separate deeds (Alloca), and Sale between family members (Family)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8309f601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Categorical features for unique values analysis\n",
+    "categorical_features = ['Neighborhood', 'ExterQual', 'Foundation', 'SaleCondition']\n",
+    "unique_values = {feature: train_df[feature].unique() for feature in categorical_features}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bd99e5c0",
+   "id": "e772e1a4",
    "metadata": {},
    "source": [
     "## Data-Driven Correlation Analysis\n",
