add step to save the scaled datasets to csv

--- a/notebooks/2_data_cleaning_and_processing_and_feature_engineering.ipynb
+++ b/notebooks/2_data_cleaning_and_processing_and_feature_engineering.ipynb
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "11286e46",
+   "id": "4a8e7dac",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53b50bda",
+   "id": "13995510",
    "metadata": {},
    "source": [
     "## Normalize Numerical Variables\n",
@@ -743,8 +743,10 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "247bd589",
-   "metadata": {},
+   "id": "98703d0f",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -971,6 +973,31 @@
     "# Checking the first few rows to ensure scaling has been applied\n",
     "pd.DataFrame(train_data_scaled, columns=common_features).head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6991674e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the scaled training data\n",
+    "pd.DataFrame(train_data_scaled, columns=common_features).to_csv(\"../data_details/train_data_scaled.csv\", index=False)\n",
+    "\n",
+    "# Saving the scaled test data\n",
+    "pd.DataFrame(test_data_scaled, columns=common_features).to_csv(\"../data_details/test_data_scaled.csv\", index=False)\n",
+    "\n",
+    "# Saving the target variable\n",
+    "y_train.to_csv(\"../data_details/y_train.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b78b9da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
