im updating my feature engineering notebook

--- a/notebooks/2_data_cleaning_and_processing_and_feature_engineering.ipynb
+++ b/notebooks/2_data_cleaning_and_processing_and_feature_engineering.ipynb
@@ -1544,7 +1544,7 @@
    "id": "ce0aeb4b",
    "metadata": {},
    "source": [
-    "Our Mutual Information (MI) score analysis reveals that 52 features have an MI score of 0 with the target variable, SalePrice. This implies these features share no mutual information with our target, suggesting they might not contribute to predicting house prices.\n",
+    "Our Mutual Information (MI) score analysis reveals that 40 features have an MI score of 0 with the target variable, SalePrice. This implies these features share no mutual information with our target, suggesting they might not contribute to predicting house prices.\n",
     "\n",
     "However, before we decide to remove these features, we need to consider a few factors:\n",
     "\n",
@@ -1563,10 +1563,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "75fcedcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped features with MI score of zero:\n",
+      "Index(['SaleType_ConLI', 'RoofStyle_Shed', 'Street_Pave', 'SaleType_Con',\n",
+      "       'RoofMatl_Membran', 'RoofStyle_Gambrel', 'Exterior2nd_Stone',\n",
+      "       'MSZoning_RH', 'SaleCondition_AdjLand', 'MiscFeature_TenC', 'MoSold',\n",
+      "       'Condition2_Feedr', 'HouseStyle_2.5Unf', 'HouseStyle_2.5Fin',\n",
+      "       'Condition2_PosN', 'HasPool', 'BldgType_TwnhsE', 'Condition1_RRNn',\n",
+      "       'Condition1_PosA', 'Condition1_RRAn', 'Heating_GasW',\n",
+      "       'Exterior2nd_Plywood', 'Exterior2nd_ImStucc', 'Exterior2nd_CBlock',\n",
+      "       'Exterior2nd_BrkFace', 'LandSlope_Sev', 'Exterior2nd_AsphShn',\n",
+      "       'Foundation_Stone', 'Foundation_Wood', 'LotConfig_FR3',\n",
+      "       'Exterior1st_CBlock', 'Exterior1st_WdShing', 'Utilities_NoSeWa',\n",
+      "       'Electrical_FuseP', 'Neighborhood_Veenker', 'LandContour_Low',\n",
+      "       'GarageType_CarPort', 'Exterior2nd_Stucco', 'Condition1_PosN',\n",
+      "       'Condition2_RRAn'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the threshold for feature removal\n",
     "threshold = 0\n",
@@ -1599,7 +1621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5763aad",
+   "id": "5023d0a5",
    "metadata": {},
    "source": [
     "\n",
@@ -1627,15 +1649,15 @@
     "\n",
     "2. **Path 2 - Model with Zero MI Features Dropped**: In this path, we will use the dataset where features with an MI score of 0 have been dropped. This allows us to see if removing these non-informative features improves the performance of our models.\n",
     "\n",
-    "3. **Path 3 - Further Feature Selection and Dimensionality Reduction**: In this path, we will explore other feature selection techniques and dimensionality reduction methods, such as Principal Component Analysis (PCA). This can help us reduce the dimensionality of our dataset and potentially improve the performance and interpretability of our models.\n",
+    "3. **Path 3 - Further Feature Selection and Dimensionality Reduction**: In this path, we can explore other feature selection techniques and dimensionality reduction methods, such as Principal Component Analysis (PCA). This can help us reduce the dimensionality of our dataset and potentially improve the performance and interpretability of our models.\n",
     "\n",
-    "In the next sections, we will train different models on these datasets and evaluate their performance. This will help us understand the impact of our preprocessing and feature engineering decisions and guide us in improving our models.\n"
+    "In Model Training notebook, we will train different models on these datasets and evaluate their performance. This will help us understand the impact of our preprocessing and feature engineering decisions and guide us in improving our models. \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d9da85d",
+   "id": "d5df2c2b",
    "metadata": {},
    "outputs": [],
    "source": []
