updated model training paths

--- a/notebooks/3_model_building_training_evaluation.ipynb
+++ b/notebooks/3_model_building_training_evaluation.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "efc81e6a",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "8e3c4167",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "512b309b",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Neural Network RMSE: 2.2363023563451097\n"
+      "Neural Network RMSE: 2.4241068400523513\n"
      ]
     },
     {
@@ -252,6 +252,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d3d80e81",
+   "metadata": {},
+   "source": [
+    "## Updating the Neural Network Model in Direction 1\n",
+    "\n",
+    "We received a warning during the training of the Neural Network model indicating that the maximum number of iterations was reached before convergence. This suggests that the model might need more iterations to find the optimal parameters. Let's increase the `max_iter` parameter and adjust the `learning_rate_init` to see if this improves the model's performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "ced00b91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eseoghene\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\house-price-prediction-Pfy1jhir-py3.11\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:1625: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Neural Network RMSE: 2.1244147160438627\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the model with increased max_iter and adjusted learning_rate_init\n",
+    "neural_network = MLPRegressor(max_iter=500, learning_rate_init=0.001)\n",
+    "\n",
+    "# Train the model\n",
+    "neural_network.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "nn_predictions = neural_network.predict(X_val)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "nn_rmse = np.sqrt(mean_squared_error(y_val, nn_predictions))\n",
+    "\n",
+    "print(f'Updated Neural Network RMSE: {nn_rmse}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "85d86d87",
    "metadata": {},
    "source": [
@@ -263,11 +311,25 @@
     "- Ridge Regression RMSE: 0.12130846072149407\n",
     "- Lasso Regression RMSE: 0.41734378753081575\n",
     "- XGBoost Regression RMSE: 0.13091274763742594\n",
-    "- Neural Network RMSE: 2.2363023563451097\n",
+    "- Neural Network RMSE: 2.999916166728695\n",
     "\n",
     "The Linear Regression model's RMSE is significantly higher than the others, suggesting that it may not be the best model for this task. The Ridge Regression and XGBoost Regression models have the lowest RMSEs, indicating that they performed the best on our validation set. This is expected as Ridge has inbuilt regularization features. The Lasso Regression model's RMSE is higher than Ridge and XGBoost, indicating it's not performing as well as them. The Neural Network model's RMSE is quite high, suggesting that it's not performing well and might need more tuning, like adjusting the architecture (number of layers, neurons) or the learning rate.\n",
     "\n",
-    "These results provide a good baseline for comparison as we proceed to Direction 2.\n",
+    "\n",
+    "## Observations on Neural Network Model Performance\n",
+    "\n",
+    "After running the Neural Network model again with increased `max_iter` and adjusted `learning_rate_init`, the difference in performance was not significant. The RMSE before the adjustment was 2.4241068400523513, and after the adjustment, it was 2.1244147160438627. This suggests that the adjustments made to the model parameters did not significantly improve the model's performance. It's possible that further tuning of the model parameters or adjustments to the model architecture may be required to achieve better performance.\n",
+    "\n",
+    "\n",
+    "These results provide a good baseline for comparison as we proceed to Direction 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "670b028b",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "## Preparing for Direction 2\n",
     "\n",
@@ -280,8 +342,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1ad40f15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression RMSE: 7282268088.739932\n",
+      "Ridge Regression RMSE: 0.1223206754782862\n",
+      "Lasso Regression RMSE: 0.41734378753081575\n",
+      "XGBoost Regression RMSE: 0.1336104636520608\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eseoghene\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\house-price-prediction-Pfy1jhir-py3.11\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:1625: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Network RMSE: 2.2308262104205774\n",
+      "In Direction 2, we trained our models using the dataset where features with an MI score of 0 have been dropped. Here are the RMSE values we obtained:\n",
+      "Linear Regression RMSE: 7282268088.739932\n",
+      "Ridge Regression RMSE: 0.1223206754782862\n",
+      "Lasso Regression RMSE: 0.41734378753081575\n",
+      "XGBoost Regression RMSE: 0.1336104636520608\n",
+      "Neural Network RMSE: 2.2308262104205774\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eseoghene\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\house-price-prediction-Pfy1jhir-py3.11\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Path 2 - Model with Zero MI Features Dropped\n",
+    "\n",
+    "# Load the dataset where features with an MI score of 0 have been dropped\n",
+    "data_path = '../data_details/train_data_scaled_dropped.csv'\n",
+    "data = pd.read_csv(data_path)\n",
+    "\n",
+    "# Load the target variable\n",
+    "y_train_path = '../data_details/target_variable.csv'\n",
+    "y = pd.read_csv(y_train_path)\n",
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "X_train, X_val, y_train, y_val = train_test_split(data, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Initialize the models\n",
+    "linear_regression = LinearRegression()\n",
+    "ridge_regression = Ridge()\n",
+    "lasso_regression = Lasso()\n",
+    "xgboost_regression = xgb.XGBRegressor(objective ='reg:squarederror')\n",
+    "\n",
+    "# Train the models\n",
+    "linear_regression.fit(X_train, y_train)\n",
+    "ridge_regression.fit(X_train, y_train)\n",
+    "lasso_regression.fit(X_train, y_train)\n",
+    "xgboost_regression.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "lr_predictions = linear_regression.predict(X_val)\n",
+    "rr_predictions = ridge_regression.predict(X_val)\n",
+    "lasso_predictions = lasso_regression.predict(X_val)\n",
+    "xgboost_predictions = xgboost_regression.predict(X_val)\n",
+    "\n",
+    "# Evaluate the models\n",
+    "lr_rmse = np.sqrt(mean_squared_error(y_val, lr_predictions))\n",
+    "rr_rmse = np.sqrt(mean_squared_error(y_val, rr_predictions))\n",
+    "lasso_rmse = np.sqrt(mean_squared_error(y_val, lasso_predictions))\n",
+    "xgboost_rmse = np.sqrt(mean_squared_error(y_val, xgboost_predictions))\n",
+    "\n",
+    "print(f'Linear Regression RMSE: {lr_rmse}')\n",
+    "print(f'Ridge Regression RMSE: {rr_rmse}')\n",
+    "print(f'Lasso Regression RMSE: {lasso_rmse}')\n",
+    "print(f'XGBoost Regression RMSE: {xgboost_rmse}')\n",
+    "\n",
+    "# Path 2 - Neural Network Model\n",
+    "\n",
+    "# Initialize the model\n",
+    "neural_network = MLPRegressor()\n",
+    "\n",
+    "# Train the model\n",
+    "neural_network.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "nn_predictions = neural_network.predict(X_val)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "nn_rmse = np.sqrt(mean_squared_error(y_val, nn_predictions))\n",
+    "\n",
+    "print(f'Neural Network RMSE: {nn_rmse}')\n",
+    "\n",
+    "# Summary of Direction 2 Results\n",
+    "\n",
+    "print(\"In Direction 2, we trained our models using the dataset where features with an MI score of 0 have been dropped. Here are the RMSE values we obtained:\")\n",
+    "print(f'Linear Regression RMSE: {lr_rmse}')\n",
+    "print(f'Ridge Regression RMSE: {rr_rmse}')\n",
+    "print(f'Lasso Regression RMSE: {lasso_rmse}')\n",
+    "print(f'XGBoost Regression RMSE: {xgboost_rmse}')\n",
+    "print(f'Neural Network RMSE: {nn_rmse}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d5af0bb",
+   "metadata": {},
+   "source": [
+    "## Updating the Neural Network Model in Direction 2\n",
+    "\n",
+    "We received a warning during the training of the Neural Network model indicating that the maximum number of iterations was reached before convergence. This suggests that the model might need more iterations to find the optimal parameters. Let's increase the `max_iter` parameter and adjust the `learning_rate_init` to see if this improves the model's performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0624aa08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eseoghene\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\house-price-prediction-Pfy1jhir-py3.11\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:1625: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated Neural Network RMSE: 2.1544314492905117\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the model with increased max_iter and adjusted learning_rate_init\n",
+    "neural_network = MLPRegressor(max_iter=500, learning_rate_init=0.001)\n",
+    "\n",
+    "# Train the model\n",
+    "neural_network.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "nn_predictions = neural_network.predict(X_val)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "nn_rmse = np.sqrt(mean_squared_error(y_val, nn_predictions))\n",
+    "\n",
+    "print(f'Updated Neural Network RMSE: {nn_rmse}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e626d5dd",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Observations on Neural Network Model Performance\n",
+    "\n",
+    "After running the Neural Network model again with increased `max_iter` and adjusted `learning_rate_init`, the difference in performance was not significant. The RMSE before the adjustment was 2.2308262104205774, and after the adjustment, it was 2.1544314492905117. This suggests that the adjustments made to the model parameters did not significantly improve the model's performance. It's possible that further tuning of the model parameters or adjustments to the model architecture may be required to achieve better performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "892950c6",
    "metadata": {},
    "outputs": [],
    "source": []
